--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.8.7",
     "aos": "^2.3.4",
+    "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -19,6 +21,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
