--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
+    "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
