--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.10.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5"
